--- a/src/components/mobileDropdown/MobileDropdown.scss
+++ b/src/components/mobileDropdown/MobileDropdown.scss
@@ -16,14 +16,15 @@
 .MobileDropdown__container {
   position: absolute;
   top: 50px;
-  right: 0;
+  right: 4px;
   display: flex;
   width: auto;
   height: auto;
   padding: 16px;
   z-index: 20;
-  background: whitesmoke;
+  background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 8px;
 }
 
 .MobileDropdown__container-content {
